--- a/contato.html
+++ b/contato.html
@@ -4,8 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contato - Novo Esquema</title>
-    <link rel="stylesheet" href="sobre.css">
+    <link rel="stylesheet" href="contatos.css">
     <link rel="stylesheet" href="global.css">
+    <link rel="shortcut icon" href="colocar a foto de favicon" type="image/x-icon">
 </head>
 <body>
 
@@ -23,7 +24,7 @@
             <a href="sobre.html">Sobre</a>
             <a href="elenco.html">Elenco</a>
             <a href="jogos.html">Jogos</a>
-            <a href="contato.html">Contato</a>
+            <a href="contatos.html">Contato</a>
           </nav>
       
         </div>
@@ -55,5 +56,8 @@
     </section>
 
     <script src="script.js"></script>
+
+    <footer>Site criado pelo Cláudio para o time Novo Esquema F.C.</footer>
+
 </body>
 </html>
