--- a/contato.html
+++ b/contato.html
@@ -24,7 +24,7 @@
             <a href="sobre.html">Sobre</a>
             <a href="elenco.html">Elenco</a>
             <a href="jogos.html">Jogos</a>
-            <a href="contatos.html">Contato</a>
+            <a href="contato.html">Contato</a>
           </nav>
       
         </div>
@@ -61,3 +61,4 @@
 
 </body>
 </html>
+
