--- a/elenco.html
+++ b/elenco.html
@@ -21,7 +21,7 @@
             <a href="sobre.html">Sobre</a>
             <a href="elenco.html">Elenco</a>
             <a href="jogos.html">Jogos</a>
-            <a href="contatos.html">Contato</a>
+            <a href="contato.html">Contato</a>
           </nav>
         </div>
     </header>
@@ -49,3 +49,4 @@
     <footer>Site criado pelo Cláudio para o time Novo Esquema F.C.</footer>
 </body>
 </html>
+
