--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 <a href="sobre.html">Sobre</a>
                 <a href="elenco.html">Elenco</a>
                 <a href="jogos.html">Jogos</a>
-                <a href="contatos.html">Contato</a>
+                <a href="contato.html">Contato</a>
            </nav>
         </div>
       </header>
@@ -37,3 +37,4 @@
 </footer>
 </body>
 </html>
+
