--- a/jogos.html
+++ b/jogos.html
@@ -20,7 +20,7 @@
               <a href="sobre.html">Sobre</a>
               <a href="elenco.html">Elenco</a>
               <a href="jogos.html">Jogos</a>
-              <a href="contatos.html">Contato</a>
+              <a href="contato.html">Contato</a>
             </nav>
         </div>
     </header>
@@ -57,3 +57,4 @@
     </footer>
 </body>
 </html>
+
