--- a/sobre.html
+++ b/sobre.html
@@ -20,7 +20,7 @@
             <a href="sobre.html">Sobre</a>
             <a href="elenco.html">Elenco</a>
             <a href="jogos.html">Jogos</a>
-            <a href="contatos.html">Contato</a>
+            <a href="contato.html">Contato</a>
           </nav>
         </div>
       </header>
@@ -47,3 +47,4 @@
     <footer>Site criado pelo Cláudio para o time Novo Esquema F.C.</footer>
 </body>
 </html>
+
