--- a/contato.html
+++ b/contato.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contato - Novo Esquema</title>
-    <link rel="stylesheet" href="contatos.css">
+    <link rel="stylesheet" href="contato.css">
     <link rel="stylesheet" href="global.css">
     <link rel="shortcut icon" href="colocar a foto de favicon" type="image/x-icon">
 </head>
@@ -61,4 +61,5 @@
 
 </body>
 </html>
+
 
