--- a/index.html
+++ b/index.html
@@ -28,13 +28,12 @@
 <div>
     <p>Bem vindo ao <strong>Novo Esquema F.C.</strong></p>
 </div>
+<Div>Evento do Time</Div>
 <main>
-    <h1>Envento do dia 16/11/2025</h1>
     <iframe height="450" width="800" src="https://www.youtube.com/embed/5eOelahmg7U?si=vKFIoaZxKOKlKFvT" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen>
 </main>
 <footer>
-    Site criado pelo Cláudio para o time Novo Esquema F.C.
+       &trade; Site criado pelo Cláudio para o time Novo Esquema F.C.
 </footer>
 </body>
 </html>
-
