Remove duplicate HTML content in contato.html

--- a/contato.html
+++ b/contato.html
@@ -57,8 +57,7 @@
 
     <script src="script.js"></script>
 
-    <footer>Site criado pelo Cláudio para o time Novo Esquema F.C.</footer>
+    <footer> &trade; Site criado pelo Cláudio para o time Novo Esquema F.C.</footer>
 
 </body>
 </html>
-
