--- a/elenco.html
+++ b/elenco.html
@@ -24,28 +24,24 @@
             <a href="contato.html">Contato</a>
           </nav>
         </div>
-    </header>
-    <section class="elenco">
-        <h1>Elenco Oficial</h1>
-        <p>Clique nas fotos para ampliar.</p>
-
-        <!-- GRADE DE FOTOS -->
-        <div class="galeria-elenco">
-
-            <!-- CARD DE JOGADOR -->
-            <div class="jogador-card">
-                <img src="foto do time.jpg" class="foto-jogador" data-id="foto1">
-                <div class="comentarios" id="comentarios-foto1"></div>
-
-                <form class="form-comentario" data-id="foto1">
-                    <input type="text" placeholder="Escreva um comentário..." required>
-                    <button>Enviar</button>
-                </form>
-            </div>
-            <!-- Adicione mais cards conforme necessário -->
-        </div>
-    </section>
+    </header> 
+            <div>   
+                <section class="galeria-elenco">
+                    <a href="nando.jpeg"><img src="nando.jpeg" target="_blanc" rel="external" alt="Nando"></a>
+                    <a href="nandinho.jpeg"><img src="nandinho.jpeg" target="_blanc" rel="external" alt="Nandinho"></a>
+                    <a href="nanico.jpeg"><img src="nanico.jpeg" target="_blanc" rel="external" alt="Nanico"></a>
+                    <a href="negao.jpeg"><img src="negao.jpeg" target="_blanc" rel="external" alt="Negão Pavilhão"></a>
+                    <a href="julio.jpeg"><img src="julio.jpeg" target="_blanc" rel="external" alt="Júlio"></a>
+                    <a href="israel.jpeg"><img src="Israel.jpeg" target="_blanc" rel="external" alt="Israel"></a>
+                    <a href="paulo volante.jpeg"><img src="paulo volante.jpeg" terget="_blanc" rel="external" alt="Paulo volante"></a>
+                    <a href="paulo zagueiro.jpeg"><img src="paulo zagueiro.jpeg" target="_blanc" rel="external" alt="Paulo zagueiro"></a>
+                    <a href="tchaca 1.jpeg"><img src="tchaca 1.jpeg" target="_blanc" rel="external" alt="Tchaca"></a>
+                    <a href="rhô.jpeg"><img src="rhô.jpeg" target="_blanc" rel="external" alt="Rhô"></a>
+                    <a href="jhonny.jpeg"><img src="jhonny.jpeg" target="blanc" rel="external" alt="Jhonny"></a>
+                    <a href="Buiu.jpeg"><img src="Buiu.jpeg" target="_blanc" rel="external" alt="Buiu"></a>
+                </section>
+            </div>    
     <script src="script.js"></script>
-    <footer>Site criado pelo Cláudio para o time Novo Esquema F.C.</footer>
+    <footer> &trade; Site criado pelo Cláudio para o time Novo Esquema F.C.</footer>
 </body>
 </html>
