--- a/index.html
+++ b/index.html
@@ -25,13 +25,13 @@
            </nav>
         </div>
       </header>
-<div>
-    <p>Bem vindo ao <strong>Novo Esquema F.C.</strong></p>
+<div class="video">
+    <p class="tema">Bem vindo ao <strong>Novo Esquema F.C.</strong></p>
 </div>
-<Div>Evento do Time</Div>
+<p class="evento">Evento do Time</p>
 <main>
-    <iframe height="450" width="800" src="https://www.youtube.com/embed/5eOelahmg7U?si=vKFIoaZxKOKlKFvT" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen>
-</main>
+    <iframe height="450" width="800" src="https://www.youtube.com/embed/5eOelahmg7U?si=vKFIoaZxKOKlKFvT" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+</main>    
 <footer>
        &trade; Site criado pelo Cláudio para o time Novo Esquema F.C.
 </footer>
