--- a/jogos.html
+++ b/jogos.html
@@ -53,8 +53,7 @@
     </section>
     <script src="script.js"></script>
     <footer>
-        Site criado pelo Cláudio para o time Novo Esquema F.C.
+        &trade; Site criado pelo Cláudio para o time Novo Esquema F.C.
     </footer>
 </body>
 </html>
-
