--- a/sobre.html
+++ b/sobre.html
@@ -25,18 +25,19 @@
         </div>
       </header>
     <!-- SEÇÃO SOBRE O TIME -->
+    <h1>Sobre o Novo Esquema</h1>
     <section class="sobre">
-        <h1>Sobre o Novo Esquema</h1>
-        <p>O time "Novo Esquema" foi fundado em 2012, com a missão de promover o esporte e a amizade nas comunidades de várzea.</p>
-        <p>Ao longo dos anos, o time tem se destacado por seu espírito coletivo, e já conquistou diversos campeonatos regionais.</p>
-        <p>Com um elenco dedicado e uma comissão técnica experiente, o "Novo Esquema" é sinônimo de garra e determinação no futebol amador.</p>
+        <p>O time "Novo Esquema" foi fundado em 2012, com a missão de promover o esporte e a amizade nas comunidades de várzea na região do capão redondo, zona sul de São Paulo. Ao longo dos anos, o time tem se destacado por seu espírito coletivo, e já conquistou diversos campeonatos regionais</p>.<br>
+        </p>Com um elenco dedicado e uma comissão técnica experiente, o "Novo Esquema" é sinônimo de garra e determinação no futebol amador.</p>
+    
     </section>
     <!-- GALERIA DE FOTOS -->
+    <h1>Galeria de Fotos</h1>
     <section class="galeria">
-        <h2>Galeria de Fotos</h2>
         <img src="foto1.jpg" class="foto" alt="Time no Campo">
         <img src="foto2.jpg" class="foto" alt="Celebrando a vitória">
         <img src="foto3.jpg" class="foto" alt="Treino do time">
+        <img src="foto4.jpg" class="foto" alt="Jogo">
     </section>
     <!-- LIGHTBOX -->
     <div id="lightbox" class="lightbox">
@@ -44,7 +45,6 @@
         <img id="lightbox-img">
     </div>
     <script src="script.js"></script>
-    <footer>Site criado pelo Cláudio para o time Novo Esquema F.C.</footer>
+    <footer> &trade; Site criado pelo Cláudio para o time Novo Esquema F.C.</footer>
 </body>
 </html>
-
