--- a/elenco.html
+++ b/elenco.html
@@ -32,12 +32,12 @@
                     <a href="nanico.jpeg"><img src="nanico.jpeg" target="_blanc" rel="external" alt="Nanico"></a>
                     <a href="negao.jpeg"><img src="negao.jpeg" target="_blanc" rel="external" alt="Negão Pavilhão"></a>
                     <a href="julio.jpeg"><img src="julio.jpeg" target="_blanc" rel="external" alt="Júlio"></a>
-                    <a href="israel.jpeg"><img src="Israel.jpeg" target="_blanc" rel="external" alt="Israel"></a>
+                    <a href="Israel.jpeg"><img src="Israel.jpeg" target="_blanc" rel="external" alt="Israel"></a>
                     <a href="paulo volante.jpeg"><img src="paulo volante.jpeg" terget="_blanc" rel="external" alt="Paulo volante"></a>
                     <a href="paulo zagueiro.jpeg"><img src="paulo zagueiro.jpeg" target="_blanc" rel="external" alt="Paulo zagueiro"></a>
                     <a href="tchaca 1.jpeg"><img src="tchaca 1.jpeg" target="_blanc" rel="external" alt="Tchaca"></a>
                     <a href="rhô.jpeg"><img src="rhô.jpeg" target="_blanc" rel="external" alt="Rhô"></a>
-                    <a href="jhonny.jpeg"><img src="jhonny.jpeg" target="blanc" rel="external" alt="Jhonny"></a>
+                    <a href="jhonny.jpeg"><img src="jhonny.jpeg" target="_blanc" rel="external" alt="Jhonny"></a>
                     <a href="Buiu.jpeg"><img src="Buiu.jpeg" target="_blanc" rel="external" alt="Buiu"></a>
                 </section>
             </div>    
@@ -45,3 +45,4 @@
     <footer> &trade; Site criado pelo Cláudio para o time Novo Esquema F.C.</footer>
 </body>
 </html>
+
