--- a/elenco.html
+++ b/elenco.html
@@ -4,44 +4,128 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Elenco - Novo Esquema</title>
-    <!-- Link para os dois arquivos CSS -->
-    <link rel="stylesheet" href="global.css"> <!-- CSS global -->
-    <link rel="stylesheet" href="elenco.css"> <!-- CSS específico da página Elenco -->
+
+    <!-- CSS global (menu) -->
+    <link rel="stylesheet" href="global.css">
+
+    <!-- CSS desta página -->
+    <link rel="stylesheet" href="elenco.css">
+
     <link rel="shortcut icon" href="colocar a foto de favicon" type="image/x-icon">
 </head>
 <body>
-    <header>
-        <div class="header-content">
-          <img src="escudo do time.jpg" class="escudo" alt="Escudo">
-          <!-- Botão hambúrguer -->
-          <button class="menu-btn" id="menu-btn">☰</button>
-          <!-- Menu -->
-          <nav id="menu">
+
+<header>
+    <div class="header-content">
+        <img src="escudo do time.jpg" class="escudo" alt="Escudo">
+        <button class="menu-btn" id="menu-btn">☰</button>
+        <nav id="menu">
             <a href="index.html">Início</a>
             <a href="sobre.html">Sobre</a>
             <a href="elenco.html">Elenco</a>
             <a href="jogos.html">Jogos</a>
             <a href="contato.html">Contato</a>
-          </nav>
+        </nav>
+    </div>
+</header>
+
+<div class="galeria">
+
+    <div class="imagem-container">
+        <img src="jhonny.jpeg" alt="Foto do Jhonny">
+        <div class="jhonny">
+            <p>Esse é o Jhonny, um craque!!!</p>
         </div>
-    </header> 
-            <div>   
-                <section class="galeria-elenco">
-                    <a href="nando.jpeg">         <img src="nando.jpeg" target="_blanc" rel="external" alt="Nando"></a>
-                    <a href="nandinho.jpeg">      <img src="nandinho.jpeg" target="_blanc" rel="external" alt="Nandinho"></a>
-                    <a href="nanico.jpeg">        <img src="nanico.jpeg" target="_blanc" rel="external" alt="Nanico"></a>
-                    <a href="negao.jpeg">         <img src="negao.jpeg"          target="_blanc" rel="external" alt="Negão Pavilhão"></a>
-                    <a href="julio.jpeg">         <img src="julio.jpeg"          target="_blanc" rel="external" alt="Júlio"></a>
-                    <a href="Israel.jpeg">        <img src="Israel.jpeg"         target="_blanc" rel="external" alt="Israel"></a>
-                    <a href="paulo volante.jpeg"> <img src="paulo volante.jpeg"  terget="_blanc" rel="external" alt="Paulo volante"></a>
-                    <a href="paulo zagueiro.jpeg"><img src="paulo zagueiro.jpeg" target="_blanc" rel="external" alt="Paulo zagueiro"></a>
-                    <a href="tchaca 1.jpeg">      <img src="tchaca 1.jpeg" target="_blanc" rel="external" alt="Tchaca"></a>
-                    <a href="rhô.jpeg">           <img src="rhô.jpeg" target="_blanc" rel="external" alt="Rhô"></a>
-                    <a href="jhonny.jpeg">        <img src="jhonny.jpeg" target="_blanc" rel="external" alt="Jhonny"></a>
-                    <a href="Buiu.jpeg">          <img src="Buiu.jpeg" target="_blanc" rel="external" alt="Buiu"></a>
-                </section>
-            </div>    
-    <script src="script.js"></script>
-    <footer> &trade; Site criado pelo Cláudio para o time Novo Esquema F.C.</footer>
+    </div>
+
+    <div class="imagem-container">
+        <img src="nando.jpeg" alt="Foto do Nando">
+        <div class="nando">
+            <p>Nando, o cabeça do time</p>
+        </div>
+    </div>
+
+    <div class="imagem-container">
+        <img src="nandinho.jpeg" alt="Foto do Nandinho">
+        <div class="nandinho">
+            <p>Todo time tem um polêmico.</p>
+            <p>O Nandinho vence todos.</p>
+        </div>
+    </div>
+
+    <div class="imagem-container">
+        <img src="nanico.jpeg" alt="Foto do Nanico">
+        <div class="nanico">
+            <p>O Nanico é jogador, técnico, tesoureiro, comprador e advogado do time.</p>
+        </div>
+    </div>
+
+    <div class="imagem-container">
+        <img src="negao.jpeg" alt="Foto do Negão">
+        <div class="negao">
+            <p>Negão Pavilhão, o mais chorão, mas todos gostam dele.</p>
+        </div>
+    </div>
+
+    <div class="imagem-container">
+        <img src="julio.jpeg" alt="Foto do Júlio">
+        <div class="julio">
+            <p>O Júlio é o cabeça do time. O nosso camisa 10.</p>
+        </div>
+    </div>
+
+    <div class="imagem-container">
+        <img src="Israel.jpeg" alt="Foto do Israel">
+        <div class="israel">
+            <p>O Israel é pau pra toda obra. Joga em várias posições.</p>
+        </div>
+    </div>
+
+    <div class="imagem-container">
+        <img src="paulo volante.jpeg" alt="Foto do Paulo volante">
+        <div class="paulo-volante">
+            <p>Esse é o Paulo, volante nato!!!</p>
+        </div>
+    </div>
+
+    <div class="imagem-container">
+        <img src="paulo zagueiro.jpeg" alt="Foto do Paulo zagueiro">
+        <div class="paulo-zagueiro">
+            <p>O Paulo é o principal jogador da nossa zaga.</p>
+        </div>
+    </div>
+
+    <div class="imagem-container">
+        <img src="rhô.jpeg" alt="Foto do Rhô">
+        <div class="rho">
+            <p>O Rhô é nosso goleirasso!!!</p>
+        </div>
+    </div>
+
+    <div class="imagem-container">
+        <img src="Buiu.jpeg" alt="Foto do Buiu">
+        <div class="buiu">
+            <p>O Buiu é nosso atacante.</p>
+            <p>Se vacilar ele entra com bola e tudo.</p>
+        </div>
+    </div>
+
+    <div class="imagem-container">
+        <img src="tchaca 1.jpeg" alt="Foto do Tchaca">
+        <div class="tchaca">
+            <p>O Tchaca é nosso lateral.</p>
+            <p>Nunca vai, quando vai quer sair jogando.</p>
+        </div>
+    </div>
+
+</div>
+
+<script src="script.js"></script>
+
+<footer>
+    &trade; Site criado pelo Cláudio para o time Novo Esquema F.C.
+</footer>
+
 </body>
 </html>
+
