--- a/index.html
+++ b/index.html
@@ -1,39 +1,131 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Novo Esquema FC</title>
-<link rel="stylesheet" href="index.css">
-<link rel="stylesheet" href="global.css">
-<link rel="shortcut icon" href="colocar a foto de favicon" type="image/x-icon">
-<script src="script.js" defer></script>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Elenco - Novo Esquema</title>
+
+    <!-- CSS global (menu) -->
+    <link rel="stylesheet" href="global.css">
+
+    <!-- CSS desta página -->
+    <link rel="stylesheet" href="elenco.css">
+
+    <link rel="shortcut icon" href="colocar a foto de favicon" type="image/x-icon">
 </head>
 <body>
-    <header>
-        <div class="header-content">
-            <img src="escudo do time.jpg" class="escudo" alt="Escudo">
-            <!-- Botão hambúrguer -->
-            <button class="menu-btn" id="menu-btn">☰</button>
-            <!-- Menu -->
-            <nav id="menu">
-                <a href="index.html">Início</a>
-                <a href="sobre.html">Sobre</a>
-                <a href="elenco.html">Elenco</a>
-                <a href="jogos.html">Jogos</a>
-                <a href="contato.html">Contato</a>
-           </nav>
+
+<header>
+    <div class="header-content">
+        <img src="escudo do time.jpg" class="escudo" alt="Escudo">
+        <button class="menu-btn" id="menu-btn">☰</button>
+        <nav id="menu">
+            <a href="index.html">Início</a>
+            <a href="sobre.html">Sobre</a>
+            <a href="elenco.html">Elenco</a>
+            <a href="jogos.html">Jogos</a>
+            <a href="contato.html">Contato</a>
+        </nav>
+    </div>
+</header>
+
+<div class="galeria">
+
+    <div class="imagem-container">
+        <img src="jhonny.jpeg" alt="Foto do Jhonny">
+        <div class="jhonny">
+            <p>Esse é o Jhonny, um craque!!!</p>
         </div>
-      </header>
-<div class="video">
-    <p class="tema">Bem vindo ao <strong>Novo Esquema F.C.</strong></p>
+    </div>
+
+    <div class="imagem-container">
+        <img src="nando.jpeg" alt="Foto do Nando">
+        <div class="nando">
+            <p>Nando, o cabeça do time</p>
+        </div>
+    </div>
+
+    <div class="imagem-container">
+        <img src="nandinho.jpeg" alt="Foto do Nandinho">
+        <div class="nandinho">
+            <p>Todo time tem um polêmico.</p>
+            <p>O Nandinho vence todos.</p>
+        </div>
+    </div>
+
+    <div class="imagem-container">
+        <img src="nanico.jpeg" alt="Foto do Nanico">
+        <div class="nanico">
+            <p>O Nanico é jogador, técnico, tesoureiro, comprador e advogado do time.</p>
+        </div>
+    </div>
+
+    <div class="imagem-container">
+        <img src="negao.jpeg" alt="Foto do Negão">
+        <div class="negao">
+            <p>Negão Pavilhão, o mais chorão, mas todos gostam dele.</p>
+        </div>
+    </div>
+
+    <div class="imagem-container">
+        <img src="julio.jpeg" alt="Foto do Júlio">
+        <div class="julio">
+            <p>O Júlio é o cabeça do time. O nosso camisa 10.</p>
+        </div>
+    </div>
+
+    <div class="imagem-container">
+        <img src="Israel.jpeg" alt="Foto do Israel">
+        <div class="israel">
+            <p>O Israel é pau pra toda obra. Joga em várias posições.</p>
+        </div>
+    </div>
+
+    <div class="imagem-container">
+        <img src="paulo volante.jpeg" alt="Foto do Paulo volante">
+        <div class="paulo-volante">
+            <p>Esse é o Paulo, volante nato!!!</p>
+        </div>
+    </div>
+
+    <div class="imagem-container">
+        <img src="paulo zagueiro.jpeg" alt="Foto do Paulo zagueiro">
+        <div class="paulo-zagueiro">
+            <p>O Paulo é o principal jogador da nossa zaga.</p>
+        </div>
+    </div>
+
+    <div class="imagem-container">
+        <img src="rhô.jpeg" alt="Foto do Rhô">
+        <div class="rho">
+            <p>O Rhô é nosso goleirasso!!!</p>
+        </div>
+    </div>
+
+    <div class="imagem-container">
+        <img src="Buiu.jpeg" alt="Foto do Buiu">
+        <div class="buiu">
+            <p>O Buiu é nosso atacante.</p>
+            <p>Se vacilar ele entra com bola e tudo.</p>
+        </div>
+    </div>
+
+    <div class="imagem-container">
+        <img src="tchaca 1.jpeg" alt="Foto do Tchaca">
+        <div class="tchaca">
+            <p>O Tchaca é nosso lateral.</p>
+            <p>Nunca vai, quando vai quer sair jogando.</p>
+        </div>
+    </div>
+
 </div>
-<p class="evento">Evento do Time</p>
-<main>
-    <iframe height="450" width="800" src="https://www.youtube.com/embed/5eOelahmg7U?si=vKFIoaZxKOKlKFvT" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-</main>    
+
+<script src="script.js"></script>
+
 <footer>
-       &trade; Site criado pelo Cláudio para o time Novo Esquema F.C.
+    &trade; Site criado pelo Cláudio para o time Novo Esquema F.C.
 </footer>
+
 </body>
 </html>
+
