--- a/index.html
+++ b/index.html
@@ -26,7 +26,8 @@
         </div>
       </header>
 <div class="video">
-    <p class="tema">Bem vindo ao <br> <strong>Novo Esquema F.C.</strong></p>
+    <p class="tema">Bem vindo ao</p>
+    <h1>Novo Esquema F.C.</h1>
 </div>
 <p class="evento">Evento do Time</p>
 <main>
