--- a/elenco.html
+++ b/elenco.html
@@ -118,6 +118,45 @@
         </div>
     </div>
 
+    <div class="imagem-container">
+        <img src="ney.jpeg" alt="Foto do Ney">
+        <div class="ney">
+            <p>O Ney um monstro na zaga</p>
+        </div>
+    </div>
+
+    <div class="imagem-container">
+        <img src="carioca.jpeg" alt="Foto do Carioca">
+        <div class="carioca">
+            <p>O carioca não da moleza</p>
+            <p>para os adversários.</p>
+        </div>
+    </div>
+
+    <div class="imagem-container">
+        <img src="Tio.jpeg" alt="Foto do Tio">
+        <div class="tio">
+            <p>O tio é defesa e lateral.</p>
+            <p>Nunca tem bola perdida</p>
+        </div>
+    </div>
+
+    <div class="imagem-container">
+        <img src="cleyton.jpeg" alt="Foto do Cleyton">
+        <div class="cleyton">
+            <p>O Cleyton é chato</p>
+            <p>para os adversários!!!</p>
+        </div>
+    </div>
+
+    <div class="imagem-container">
+        <img src="cardoso.jpeg" alt="Foto do cardoso">
+        <div class="cardoso">
+            <p>Esse é liso!!! Lateral</p>
+            <p>difícil de pegar.</p>
+        </div>
+    </div>
+
 </div>
 
 <script src="script.js"></script>
@@ -128,4 +167,3 @@
 
 </body>
 </html>
-
