--- a/elenco.html
+++ b/elenco.html
@@ -119,17 +119,18 @@
     </div>
 
     <div class="imagem-container">
-        <img src="ney.jpeg" alt="Foto do Ney">
-        <div class="ney">
-            <p>O Ney um monstro na zaga</p>
+        <img src="carioca.jpeg" alt="Foto do Carioca">
+        <div class="carioca">
+            <p>O carioca é um meia que</p>
+            <p>não da molaza para </p>
+            <p>os adversários.</p>
         </div>
     </div>
 
     <div class="imagem-container">
-        <img src="carioca.jpeg" alt="Foto do Carioca">
-        <div class="carioca">
-            <p>O carioca não da moleza</p>
-            <p>para os adversários.</p>
+        <img src="ney.jpeg" alt="Foto do Ney">
+        <div class="ney">
+        <p>O Ney um monstro na zaga</p> 
         </div>
     </div>
 
@@ -144,8 +145,8 @@
     <div class="imagem-container">
         <img src="cleyton.jpeg" alt="Foto do Cleyton">
         <div class="cleyton">
-            <p>O Cleyton é chato</p>
-            <p>para os adversários!!!</p>
+            <p>O Cleyton é um volante</p>
+            <p>chato para os adversários!!!</p>
         </div>
     </div>
 
