--- a/elenco.html
+++ b/elenco.html
@@ -158,6 +158,14 @@
         </div>
     </div>
 
+    <div class="imagem-container">
+        <img src="gabriel.jpeg" alt="Foto do Gabriel">
+        <div class="gabriel">
+            <p>Esse é liso!!! Lateral</p>
+            <p>difícil de pegar.</p>
+        </div>
+    </div>
+
 </div>
 
 <script src="script.js"></script>
