--- a/elenco.html
+++ b/elenco.html
@@ -161,8 +161,8 @@
     <div class="imagem-container">
         <img src="gabriel.jpeg" alt="Foto do Gabriel">
         <div class="gabriel">
-            <p>Esse é liso!!! Lateral</p>
-            <p>difícil de pegar.</p>
+            <p>Esse é nosso fotógrafo!!!</p>
+            <p>Excelente profissional.</p>
         </div>
     </div>
 
@@ -176,3 +176,4 @@
 
 </body>
 </html>
+
