--- a/jogos.html
+++ b/jogos.html
@@ -3,57 +3,176 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Jogos - Novo Esquema</title>
-    <link rel="stylesheet" href="jogos.css">
+    <title>Elenco - Novo Esquema</title>
+
+    <!-- CSS global (menu) -->
     <link rel="stylesheet" href="global.css">
+
+    <!-- CSS desta página -->
+    <link rel="stylesheet" href="elenco.css">
+
     <link rel="shortcut icon" href="colocar a foto de favicon" type="image/x-icon">
 </head>
 <body>
-    <header>
-        <div class="header-content">
-          <img src="escudo do time.jpg" class="escudo" alt="Escudo">
-          <!-- Botão hambúrguer -->
-          <button class="menu-btn" id="menu-btn">☰</button>
-          <!-- Menu -->
-            <nav id="menu">
-              <a href="index.html">Início</a>
-              <a href="sobre.html">Sobre</a>
-              <a href="elenco.html">Elenco</a>
-              <a href="jogos.html">Jogos</a>
-              <a href="contato.html">Contato</a>
-            </nav>
+
+<header>
+    <div class="header-content">
+        <img src="escudo do time.jpg" class="escudo" alt="Escudo">
+        <button class="menu-btn" id="menu-btn">☰</button>
+        <nav id="menu">
+            <a href="index.html">Início</a>
+            <a href="sobre.html">Sobre</a>
+            <a href="elenco.html">Elenco</a>
+            <a href="jogos.html">Jogos</a>
+            <a href="contato.html">Contato</a>
+        </nav>
+    </div>
+</header>
+
+<div class="galeria">
+
+    <div class="imagem-container">
+        <img src="jhonny.jpeg" alt="Foto do Jhonny">
+        <div class="jhonny">
+            <p>Esse é o Jhonny, um craque!!!</p>
         </div>
-    </header>
-    <!-- SEÇÃO DE JOGOS -->
-    <section class="jogos">
-        <h1>Agenda de Jogos</h1>  
-        <!-- Próximos Jogos -->
-        <h2>Próximos Jogos</h2>
-        <div class="jogo-proximo">
-            <p><strong>Data:</strong> 25/11/2025</p>
-            <p><strong>Adversário:</strong> Time Competidor</p>
-            <p><strong>Local:</strong> Estádio Local</p>
-            <p><strong>Placar:</strong> A ser definido</p>
+    </div>
+
+    <div class="imagem-container">
+        <img src="nando.jpeg" alt="Foto do Nando">
+        <div class="nando">
+            <p>Nando, o cabeça do time</p>
         </div>
-        <!-- Jogos Passados -->
-        <h2>Jogos Passados</h2>
-        <div class="jogo-passado">
-            <p><strong>Data:</strong> 20/11/2025</p>
-            <p><strong>Adversário:</strong> Time Adversário</p>
-            <p><strong>Local:</strong> Campo Municipal</p>
-            <p><strong>Placar:</strong> Novo Esquema 3 x 2 Time Adversário</p>
+    </div>
+
+    <div class="imagem-container">
+        <img src="nandinho.jpeg" alt="Foto do Nandinho">
+        <div class="nandinho">
+            <p>Todo time tem um polêmico.</p>
+            <p>O Nandinho vence todos.</p>
         </div>
-        <div class="jogo-passado">
-            <p><strong>Data:</strong> 15/11/2025</p>
-            <p><strong>Adversário:</strong> Time Rival</p>
-            <p><strong>Local:</strong> Estádio Central</p>
-            <p><strong>Placar:</strong> Novo Esquema 1 x 1 Time Rival</p>
+    </div>
+
+    <div class="imagem-container">
+        <img src="nanico.jpeg" alt="Foto do Nanico">
+        <div class="nanico">
+            <p>O Nanico é jogador, técnico, tesoureiro, comprador e advogado do time.</p>
         </div>
-    <!-- Adicione mais jogos passados conforme necessário -->
-    </section>
-    <script src="script.js"></script>
-    <footer>
-        &trade; Site criado pelo Cláudio para o time Novo Esquema F.C.
-    </footer>
+    </div>
+
+    <div class="imagem-container">
+        <img src="negao.jpeg" alt="Foto do Negão">
+        <div class="negao">
+            <p>Negão Pavilhão, o mais chorão, mas todos gostam dele.</p>
+        </div>
+    </div>
+
+    <div class="imagem-container">
+        <img src="julio.jpeg" alt="Foto do Júlio">
+        <div class="julio">
+            <p>O Júlio é o cabeça do time. O nosso camisa 10.</p>
+        </div>
+    </div>
+
+    <div class="imagem-container">
+        <img src="Israel.jpeg"  alt="Foto do Israel">
+        <div class="israel">
+            <p>O Israel é pau pra toda obra. Joga em várias posições.</p>
+        </div>
+    </div>
+
+    <div class="imagem-container">
+        <img src="paulo volante.jpeg" alt="Foto do Paulo volante">
+        <div class="paulo-volante">
+            <p>Esse é o Paulo, volante nato!!!</p>
+        </div>
+    </div>
+
+    <div class="imagem-container">
+        <img src="paulo zagueiro.jpeg" alt="Foto do Paulo zagueiro">
+        <div class="paulo-zagueiro">
+            <p>O Paulo é o principal jogador da nossa zaga.</p>
+        </div>
+    </div>
+
+    <div class="imagem-container">
+        <img src="rhô.jpeg" alt="Foto do Rhô">
+        <div class="rho">
+            <p>O Rhô é nosso goleirasso!!!</p>
+        </div>
+    </div>
+
+    <div class="imagem-container">
+        <img src="Buiu.jpeg" alt="Foto do Buiu">
+        <div class="buiu">
+            <p>O Buiu é nosso atacante.</p>
+            <p>Se vacilar ele entra com bola e tudo.</p>
+        </div>
+    </div>
+
+    <div class="imagem-container">
+        <img src="tchaca 1.jpeg" alt="Foto do Tchaca">
+        <div class="tchaca">
+            <p>O Tchaca é nosso lateral.</p>
+            <p>Nunca vai, quando vai quer sair jogando.</p>
+        </div>
+    </div>
+
+    <div class="imagem-container">
+        <img src="carioca.jpeg" alt="Foto do Carioca">
+        <div class="carioca">
+            <p>O carioca é um meia que</p>
+            <p>não da molaza para </p>
+            <p>os adversários.</p>
+        </div>
+    </div>
+
+    <div class="imagem-container">
+        <img src="ney.jpeg" alt="Foto do Ney">
+        <div class="ney">
+        <p>O Ney um monstro na zaga</p> 
+        </div>
+    </div>
+
+    <div class="imagem-container">
+        <img src="Tio.jpeg" alt="Foto do Tio">
+        <div class="tio">
+            <p>O tio é defesa e lateral.</p>
+            <p>Nunca tem bola perdida</p>
+        </div>
+    </div>
+
+    <div class="imagem-container">
+        <img src="cleyton.jpeg" alt="Foto do Cleyton">
+        <div class="cleyton">
+            <p>O Cleyton é um volante</p>
+            <p>chato para os adversários!!!</p>
+        </div>
+    </div>
+
+    <div class="imagem-container">
+        <img src="cardoso.jpeg" alt="Foto do cardoso">
+        <div class="cardoso">
+            <p>Esse é liso!!! Lateral</p>
+            <p>difícil de pegar.</p>
+        </div>
+    </div>
+
+    <div class="imagem-container">
+        <img src="gabriel.jpeg" alt="Foto do Gabriel">
+        <div class="gabriel">
+            <p>Esse é nosso fotógrafo!!!</p>
+            <p>Excelente profissional.</p>
+        </div>
+    </div>
+
+</div>
+
+<script src="script.js"></script>
+
+<footer>
+    &trade; Site criado pelo Cláudio para o time Novo Esquema F.C.
+</footer>
+
 </body>
 </html>
