--- a/jogos.html
+++ b/jogos.html
@@ -26,8 +26,10 @@
     </header>
     <!-- SEÇÃO DE JOGOS -->
     <section class="jogos">
-        <h1>Jogos passados</h1>  
-      
+        <div>
+            <h1>Jogos passados</h1>  
+        </div>
+        
         <div class="imagem-container">
             <img src="foto2311.jpeg" alt="foto2311">
             <div class="foto2311">
