--- a/elenco.html
+++ b/elenco.html
@@ -14,7 +14,6 @@
     <link rel="shortcut icon" href="colocar a foto de favicon" type="image/x-icon">
 </head>
 <body>
-
 <header>
     <div class="header-content">
         <img src="escudo do time.jpg" class="escudo" alt="Escudo">
@@ -28,6 +27,9 @@
         </nav>
     </div>
 </header>
+<div>
+    <h1>Elenco</h1>
+</div>
 
 <div class="galeria">
 
@@ -75,7 +77,7 @@
     </div>
 
     <div class="imagem-container">
-        <img src="Israel.jpeg" alt="Foto do Israel">
+        <img src="Israel.jpeg"  alt="Foto do Israel">
         <div class="israel">
             <p>O Israel é pau pra toda obra. Joga em várias posições.</p>
         </div>
@@ -176,5 +178,3 @@
 
 </body>
 </html>
-
-
