--- a/contato.html
+++ b/contato.html
@@ -30,14 +30,13 @@
         </div>
       </header>
       <div>
-        <h1>Contato</h1>
+        <h1>Entre em contato</h1>
       </div>
       
       
     <!-- SEÇÃO DE CONTATO -->
     <section class="contato">
-        <h1>Entre em Contato</h1>
-        <p>Tem alguma dúvida ou sugestão? Envie sua mensagem abaixo!</p>
+        <p><h2>Tem alguma dúvida ou sugestão? Envie sua mensagem abaixo!</h2></p>
 
         <!-- FORMULÁRIO DE CONTATO -->
         <form action="mailto:seu-email@dominio.com" method="post" enctype="text/plain">
