--- a/sobre.html
+++ b/sobre.html
@@ -25,7 +25,9 @@
         </div>
       </header>
     <!-- SEÇÃO SOBRE O TIME -->
-    <h1>Sobre o Novo Esquema</h1>
+    <div>
+        <h1>Sobre o Novo Esquema F.C.</h1>  
+    </div>
     <section class="sobre">
        <p>O Novo Esquema nasceu em 2012, lá no meio da correria do Capão Redondo, com a ideia de juntar a rapaziada, fortalecer a amizade e representar a quebrada do jeito que é, muita bola no pé, respeito e parceria. Desde os primeiros rachões, o time já chamava atenção pela união e pela energia firmeza do grupo.</p>
 
@@ -39,7 +41,7 @@
     
 
     <div class="video">
-        <h1>Na festa do time todos são bem vindos.</h1>
+        <h2>Na festa do time todos são bem vindos.</h2>
     </div>
     <p class="evento"></p>
     <main>
