--- a/index.html
+++ b/index.html
@@ -25,9 +25,8 @@
            </nav>
         </div>
       </header>
-<div class="video">
-    <p class="tema">Bem vindo ao</p>
-    <h1>Novo Esquema F.C.</h1>
+<div>
+  <h1>Sejam todos bem vindos ao Novo Esquema F.C.!!!</h1>
 </div>
 <p class="evento">Evento do Time</p>
 <main>
