--- a/index.html
+++ b/index.html
@@ -13,18 +13,17 @@
     <header>
         <div class="header-content">
             <img src="escudo do time.jpg" class="escudo" alt="Escudo">
-            <!-- Botão hambúrguer -->
-            <button class="menu-btn" id="menu-btn">☰</button>
-            <!-- Menu -->
-            <nav id="menu">
+    
+            <nav>
                 <a href="index.html">Início</a>
                 <a href="sobre.html">Sobre</a>
                 <a href="elenco.html">Elenco</a>
                 <a href="jogos.html">Jogos</a>
                 <a href="contato.html">Contato</a>
-           </nav>
+            </nav>
         </div>
-      </header>
+    </header>
+    
 <div>
   <h1>Sejam todos bem vindos ao Novo Esquema F.C.!!!</h1>
 </div>
