--- a/elenco.html
+++ b/elenco.html
@@ -67,8 +67,155 @@
             </div>
         </div>
 
-        <!-- Mais imagens... -->
-        <!-- Repita para as outras imagens conforme necessário -->
+          <!-- Imagem do Nanico -->
+          <div class="imagem-container">
+            <a href="nanico.jpeg" class="lightbox">
+                <img src="nanico.jpeg" alt="Foto do nanico">
+            </a>
+            <div class="nandinho">
+                <p>O Nanico é jogador, técnico, tesoureiro, comprador e advogado do time.</p>
+            </div>
+        </div>
+
+         <!-- Imagem do Negão -->
+         <div class="imagem-container">
+            <a href="negao.jpeg" class="lightbox">
+                <img src="negao.jpeg" alt="Foto do negão">
+            </a>
+            <div class="negão">
+                <p>Negão Pavilhão, o mais chorão, mas todos gostam dele.</p>
+            </div>
+        </div>
+
+         <!-- Imagem do Julio -->
+         <div class="imagem-container">
+            <a href="julio.jpeg" class="lightbox">
+                <img src="julio.jpeg" alt="Foto do julio">
+            </a>
+            <div class="julio">
+                <p>O Júlio é o cabeça do time. O nosso camisa 10.</p>
+            </div>
+        </div>
+      
+         <!-- Imagem do Israel -->
+         <div class="imagem-container">
+            <a href="Israel.jpeg" class="lightbox">
+                <img src="Israel.jpeg" alt="Foto do Israel">
+            </a>
+            <div class="Israel">
+                <p>O Israel é pau pra toda obra. Joga em várias posições.</p>
+            </div>
+        </div>
+
+         <!-- Imagem do Paulo-volante -->
+         <div class="imagem-container">
+            <a href="paulo volante.jpeg" class="lightbox">
+                <img src="paulo volante.jpeg" alt="Foto do">
+            </a>
+            <div class="">
+                <p>Esse é o Paulo, volante nato!!!</p>
+            </div>
+        </div>
+
+        <!-- Imagem do Paulo zagueiro  -->
+        <div class="imagem-container">
+            <a href="paulo zagueiro.jpeg" class="lightbox">
+                <img src="paulo zagueiro.jpeg" alt="Foto do">
+            </a>
+            <div class="Paulo zagueiro">
+                <p>O Paulo é o principal jogador da nossa zaga.</p>
+            </div>
+        </div>
+
+        <!-- Imagem do Rhô -->
+        <div class="imagem-container">
+            <a href="rhô.jpeg" class="lightbox">
+                <img src="rhô.jpeg" alt="Foto do Rhô">
+            </a>
+            <div class="Rhô">
+                <p>O Rhô é nosso goleirasso!!!</p>  
+            </div>
+        </div>
+
+        <!-- Imagem do Buiu -->
+        <div class="imagem-container">
+            <a href="Buiu.jpeg" class="lightbox">
+                <img src="Buiu.jpeg" alt="Foto do Buiu">
+            </a>
+            <div class="Buiu">
+                <p>O Buiu é nosso atacante. Se vacilar ele entra com bola e tudo.</p>  
+            </div>
+        </div>
+
+        <!-- Imagem do Tchaca -->
+        <div class="imagem-container">
+            <a href="tchaca 1.jpeg" class="lightbox">
+                <img src="tchaca 1.jpeg" alt="Foto do Tchaca">
+            </a>
+            <div class="Tchaca">
+                <p>Nunca vai, quando vai quer sair jogando.</p>  
+            </div>
+        </div>
+
+        <!-- Imagem do Carioca  -->
+        <div class="imagem-container">
+            <a href="carioca.jpeg" class="lightbox">
+                <img src="carioca.jpeg" alt="Foto do Carioca">
+            </a>
+            <div class="Carioca">
+                <p>O carioca é um meia que não da moleza para os adversários.</p>
+            </div>
+        </div>
+
+        <!-- Imagem do Ney  -->
+        <div class="imagem-container">
+            <a href="ney.jpeg" class="lightbox">
+                <img src="ney.jpeg" alt="Foto do Ney">
+            </a>
+            <div class="Ney">
+                p>O Ney um monstro na zaga</p>
+            </div>
+        </div>
+
+         <!-- Imagem do Tio  -->
+         <div class="imagem-container">
+            <a href="Tio.jpeg" class="lightbox">
+                <img src="Tio.jpeg" alt="Foto do Tio">
+            </a>
+            <div class="Tio">
+                <p>O tio é defesa e lateral. Nunca tem bola perdida</p>
+            </div>
+        </div>
+
+        <!-- Imagem do Cleyton  -->
+        <div class="imagem-container">
+            <a href="cleyton.jpeg" class="lightbox">
+                <img src="cleyton.jpeg" alt="Foto do Cleyton">
+            </a>
+            <div class="Cleyton">
+                <p>O Cleyton é um volante</p> <p>chato para os adversários!!!</p>
+            </div>
+        </div>
+
+        <!-- Imagem do Cardoso-->
+        <div class="imagem-container">
+            <a href="cardoso.jpeg" class="lightbox">
+                <img src="cardoso.jpeg" alt="Foto do Cardoso">
+            </a>
+            <div class="Cardoso">
+                <p>Esse é liso!!! Lateral é difícil de pegar.</p>
+            </div>
+        </div>
+
+        <!-- Imagem do Gabriel -->
+        <div class="imagem-container">
+            <a href="gabriel.jpeg" class="lightbox">
+                <img src="gabriel.jpeg" alt="Foto do Gabriel">
+            </a>
+            <div class="Gabriel">
+                <p>Esse é nosso fotógrafo!!! Excelente profissional.</p>
+            </div>
+        </div>
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/simplelightbox@2.4.0/dist/simple-lightbox.min.js"></script>
