--- a/elenco.html
+++ b/elenco.html
@@ -38,8 +38,8 @@
     <div class="galeria">
         <!-- Imagem do Jhonny -->
         <div class="imagem-container">
-            <a href="jhonny.jpeg" class="lightbox">
-                <img src="jhonny.jpeg" alt="Foto do Jhonny">
+            <a href="jhonny2.jpeg" class="lightbox">
+                <img src="jhonny2.jpeg" alt="Foto do Jhonny">
             </a>
             <div class="jhonny">
                 <p>Esse é o Jhonny, um craque!!!</p>
@@ -48,8 +48,8 @@
 
         <!-- Imagem do Nando -->
         <div class="imagem-container">
-            <a href="nando.jpeg" class="lightbox">
-                <img src="nando.jpeg" alt="Foto do Nando">
+            <a href="nando2.jpeg" class="lightbox">
+                <img src="nando2.jpeg" alt="Foto do Nando">
             </a>
             <div class="nando">
                 <p>Nando, o cabeça do time</p>
@@ -58,8 +58,8 @@
 
         <!-- Imagem do Nandinho -->
         <div class="imagem-container">
-            <a href="nandinho.jpeg" class="lightbox">
-                <img src="nandinho.jpeg" alt="Foto do Nandinho">
+            <a href="nandinho2.jpeg" class="lightbox">
+                <img src="nandinho2.jpeg" alt="Foto do Nandinho">
             </a>
             <div class="nandinho">
                 <p>Todo time tem um polêmico.</p>
@@ -69,8 +69,8 @@
 
           <!-- Imagem do Nanico -->
           <div class="imagem-container">
-            <a href="nanico.jpeg" class="lightbox">
-                <img src="nanico.jpeg" alt="Foto do nanico">
+            <a href="nanico-2.jpeg" class="lightbox">
+                <img src="nanico-2.jpeg" alt="Foto do nanico">
             </a>
             <div class="nandinho">
                 <p>O Nanico é jogador, técnico, tesoureiro, comprador e advogado do time.</p>
@@ -79,8 +79,8 @@
 
          <!-- Imagem do Negão -->
          <div class="imagem-container">
-            <a href="negao.jpeg" class="lightbox">
-                <img src="negao.jpeg" alt="Foto do negão">
+            <a href="negao2.jpeg" class="lightbox">
+                <img src="negao2.jpeg" alt="Foto do negão">
             </a>
             <div class="negão">
                 <p>Negão Pavilhão, o mais chorão, mas todos gostam dele.</p>
@@ -89,8 +89,8 @@
 
          <!-- Imagem do Julio -->
          <div class="imagem-container">
-            <a href="julio.jpeg" class="lightbox">
-                <img src="julio.jpeg" alt="Foto do julio">
+            <a href="julio2.jpeg" class="lightbox">
+                <img src="julio2.jpeg" alt="Foto do julio">
             </a>
             <div class="julio">
                 <p>O Júlio é o cabeça do time. O nosso camisa 10.</p>
@@ -99,8 +99,8 @@
       
          <!-- Imagem do Israel -->
          <div class="imagem-container">
-            <a href="Israel.jpeg" class="lightbox">
-                <img src="Israel.jpeg" alt="Foto do Israel">
+            <a href="israel2.jpeg" class="lightbox">
+                <img src="israel2.jpeg" alt="Foto do Israel">
             </a>
             <div class="Israel">
                 <p>O Israel é pau pra toda obra. Joga em várias posições.</p>
@@ -109,8 +109,8 @@
 
          <!-- Imagem do Paulo-volante -->
          <div class="imagem-container">
-            <a href="paulo volante.jpeg" class="lightbox">
-                <img src="paulo volante.jpeg" alt="Foto do">
+            <a href="paulo volante2.jpeg" class="lightbox">
+                <img src="paulo volante2.jpeg" alt="Foto do">
             </a>
             <div class="">
                 <p>Esse é o Paulo, volante nato!!!</p>
@@ -119,8 +119,8 @@
 
         <!-- Imagem do Paulo zagueiro  -->
         <div class="imagem-container">
-            <a href="paulo zagueiro.jpeg" class="lightbox">
-                <img src="paulo zagueiro.jpeg" alt="Foto do">
+            <a href="paulo zagueiro2.jpeg" class="lightbox">
+                <img src="paulo zagueiro2.jpeg" alt="Foto do">
             </a>
             <div class="Paulo zagueiro">
                 <p>O Paulo é o principal jogador da nossa zaga.</p>
@@ -129,8 +129,8 @@
 
         <!-- Imagem do Rhô -->
         <div class="imagem-container">
-            <a href="rhô.jpeg" class="lightbox">
-                <img src="rhô.jpeg" alt="Foto do Rhô">
+            <a href="rho2.jpeg" class="lightbox">
+                <img src="rho2.jpeg" alt="Foto do Rhô">
             </a>
             <div class="Rhô">
                 <p>O Rhô é nosso goleirasso!!!</p>  
@@ -139,8 +139,8 @@
 
         <!-- Imagem do Buiu -->
         <div class="imagem-container">
-            <a href="Buiu.jpeg" class="lightbox">
-                <img src="Buiu.jpeg" alt="Foto do Buiu">
+            <a href="buiu2.jpeg" class="lightbox">
+                <img src="buiu2.jpeg" alt="Foto do Buiu">
             </a>
             <div class="Buiu">
                 <p>O Buiu é nosso atacante. Se vacilar ele entra com bola e tudo.</p>  
@@ -149,8 +149,8 @@
 
         <!-- Imagem do Tchaca -->
         <div class="imagem-container">
-            <a href="tchaca 1.jpeg" class="lightbox">
-                <img src="tchaca 1.jpeg" alt="Foto do Tchaca">
+            <a href="tchaca2.jpeg" class="lightbox">
+                <img src="tchaca2.jpeg" alt="Foto do Tchaca">
             </a>
             <div class="Tchaca">
                 <p>Nunca vai, quando vai quer sair jogando.</p>  
@@ -159,8 +159,8 @@
 
         <!-- Imagem do Carioca  -->
         <div class="imagem-container">
-            <a href="carioca.jpeg" class="lightbox">
-                <img src="carioca.jpeg" alt="Foto do Carioca">
+            <a href="carioca2.jpeg" class="lightbox">
+                <img src="carioca2.jpeg" alt="Foto do Carioca">
             </a>
             <div class="Carioca">
                 <p>O carioca é um meia que não da moleza para os adversários.</p>
@@ -169,8 +169,8 @@
 
         <!-- Imagem do Ney  -->
         <div class="imagem-container">
-            <a href="ney.jpeg" class="lightbox">
-                <img src="ney.jpeg" alt="Foto do Ney">
+            <a href="ney2.jpeg" class="lightbox">
+                <img src="ney2.jpeg" alt="Foto do Ney">
             </a>
             <div class="Ney">
                 p>O Ney um monstro na zaga</p>
@@ -179,8 +179,8 @@
 
          <!-- Imagem do Tio  -->
          <div class="imagem-container">
-            <a href="Tio.jpeg" class="lightbox">
-                <img src="Tio.jpeg" alt="Foto do Tio">
+            <a href="tio2.jpeg" class="lightbox">
+                <img src="tio2.jpeg" alt="Foto do Tio">
             </a>
             <div class="Tio">
                 <p>O tio é defesa e lateral. Nunca tem bola perdida</p>
@@ -189,8 +189,8 @@
 
         <!-- Imagem do Cleyton  -->
         <div class="imagem-container">
-            <a href="cleyton.jpeg" class="lightbox">
-                <img src="cleyton.jpeg" alt="Foto do Cleyton">
+            <a href="cleyton2.jpeg" class="lightbox">
+                <img src="cleyton2.jpeg" alt="Foto do Cleyton">
             </a>
             <div class="Cleyton">
                 <p>O Cleyton é um volante</p> <p>chato para os adversários!!!</p>
@@ -199,8 +199,8 @@
 
         <!-- Imagem do Cardoso-->
         <div class="imagem-container">
-            <a href="cardoso.jpeg" class="lightbox">
-                <img src="cardoso.jpeg" alt="Foto do Cardoso">
+            <a href="cardoso2.jpeg" class="lightbox">
+                <img src="cardoso2.jpeg" alt="Foto do Cardoso">
             </a>
             <div class="Cardoso">
                 <p>Esse é liso!!! Lateral é difícil de pegar.</p>
@@ -209,8 +209,8 @@
 
         <!-- Imagem do Gabriel -->
         <div class="imagem-container">
-            <a href="gabriel.jpeg" class="lightbox">
-                <img src="gabriel.jpeg" alt="Foto do Gabriel">
+            <a href="gabriel2.jpeg" class="lightbox">
+                <img src="gabriel2.jpeg" alt="Foto do Gabriel">
             </a>
             <div class="Gabriel">
                 <p>Esse é nosso fotógrafo!!! Excelente profissional.</p>
