--- a/sobre.html
+++ b/sobre.html
@@ -32,7 +32,7 @@
     <section class="sobre">
        <p>O Novo Esquema nasceu em 2012, lá no meio da correria do Capão Redondo, com a ideia de juntar a rapaziada, fortalecer a amizade e representar a quebrada do jeito que é, muita bola no pé, respeito e parceria. Desde os primeiros rachões, o time já chamava atenção pela união e pela energia firmeza do grupo.</p>
 
-        <p>Com passar do tempo, o Novo Esquema foi ganhando moral nos campos da região e conquistando vários campeonatos de várzea. Cada jogo vira um evento, a torcida colada, a família junto, os amigos gritando e o time dando o sangue até o fim. Aqui ninguém joga sozinho, é um correndo pelo outro, é lealdade, é a verdadeira essência da periferia.</p>
+        <p>Com passar do tempo, o Novo Esquema foi ganhando moral nos campos da região e conquistando seu espaço e ficando muito conhecido. Cada jogo vira um evento, a torcida colada, a família junto, os amigos gritando e o time dando o sangue até o fim. Aqui ninguém joga sozinho, é um correndo pelo outro, é lealdade, é a verdadeira essência da periferia.</p>
         
         <p>não é só dentro de campo que o Novo Esquema faz história. De tempos em tempos rola festa pra geral, pagodinho pra animar, churrasco no capricho, reencontro da rapaziada e muita diversão pra molecada que cresce vendo o time como inspiração. É aquele clima de comunidade que só quem é da quebrada conhece.</p>
         
