--- a/elenco.html
+++ b/elenco.html
@@ -173,7 +173,7 @@
                 <img src="ney2.jpeg" alt="Foto do Ney">
             </a>
             <div class="Ney">
-                p>O Ney um monstro na zaga</p>
+                <p>O Ney um monstro na zaga</p>
             </div>
         </div>
 
@@ -217,3 +217,21 @@
             </div>
         </div>
     </div>
+
+    <script src="https://cdn.jsdelivr.net/npm/simplelightbox@2.4.0/dist/simple-lightbox.min.js"></script>
+    
+    <script>
+        // Inicializa o SimpleLightbox com opções de responsividade
+        var lightbox = new SimpleLightbox('.lightbox', {
+            // Configuração para a responsividade da imagem
+            maxWidth: '90%',
+            maxHeight: '90vh',  // Limita a altura máxima da imagem
+            closeText: 'X',  // Fechar com um X
+        });
+    </script>
+
+    <footer>
+        &trade; Site criado pelo Cláudio para o time Novo Esquema F.C.
+    </footer>
+</body>
+</html>
