--- a/jogos.html
+++ b/jogos.html
@@ -42,7 +42,7 @@
                 <img src="foto2311.jpeg" alt="foto2311">
             </a>
             <div class="foto2311">
-                <p>Esse é o Jhonny, um craque!!!</p>
+                <p>Jogão!!! Ganhamos de 1 x 0 com com do Julio.</p>
             </div>
         </div>
 
@@ -65,3 +65,4 @@
     </footer>
 </body>
 </html>
+
