--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Novo Esquema FC</title>
+<title> Home do Atitude F.C</title>
 <link rel="stylesheet" href="index.css">
 <link rel="stylesheet" href="global.css">
 <link rel="shortcut icon" href="colocar a foto de favicon" type="image/x-icon">
@@ -12,27 +12,27 @@
 <body>
     <header>
         <div class="header-content">
-            <img src="escudo do time.jpg" class="escudo" alt="Escudo">
+            <img src="escudo.jpeg" class="escudo" alt="Escudo">
     
             <nav>
-                <a href="index.html">Início</a>
-                <a href="sobre.html">Sobre</a>
-                <a href="elenco.html">Elenco</a>
+                <a href="index.html">Home</a>
+                <a href="elenco.html">Fotos</a>
                 <a href="jogos.html">Jogos</a>
-                <a href="contato.html">Contato</a>
+                <!--<a href="contato.html">Contato</a>-->
             </nav>
         </div>
     </header>
     
 <div>
-  <h1>Sejam todos bem vindos ao Novo Esquema F.C.!!!</h1>
+  <h1>Sejam todos bem vindos ao Atitude F.C.!!!</h1>
 </div>
-<p class="evento">Evento do Time</p>
+<p class="evento">Sobre o Atitude F.C.</p>
 <main>
     <iframe height="450" width="800" src="https://www.youtube.com/embed/5eOelahmg7U?si=vKFIoaZxKOKlKFvT" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-</main>    
+</main>  
+<link rel="stylesheet" href="script.js">  
 <footer>
-       &trade; Site criado pelo Cláudio para o time Novo Esquema F.C.
+       &trade; Site criado pelo Cláudio para o time Atitude F.C.
 </footer>
 </body>
 </html>
